# game

./: .gitignore  README.md  project.godot
addons/example/: CMakeLists.txt  SConstruct  build-linux.bat  build-windows.bat  example.gdextension  example.gdextension.uid  extension.gdextension  extension.gdextension.uid  新建类步骤.md  编译.bat
addons/example/src/: example_dll.cpp  example_dll.h  example_lib.cpp  example_lib.h  register_types.cpp  register_types.h
autoloads/SaveData/: SaveData.gd  SaveData.gd.uid
resources/: icon.svg.import
resources/font/: unifont-17.0.04.otf.import
resources/themes/: main_ui.tres
scenes/TestScene/: test_scene.gd  test_scene.gd.uid  test_scene.tscn
